--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Photo Frame App</title>
-  <link rel="stylesheet" href="style.css">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo Frame App</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  </head>
-  
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+  <title>Frame Your Photo</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+</head>
 <body>
-  <h1>Thank you for being a part of IDLC's Journey</h1>
+  <header>
+    <img src="assets/logo.png" alt="IDLC Logo" class="logo" />
+  </header>
 
-  <h1>Upload Your Photo</h1>
+  <main>
+    <h1>Frame Your Photo</h1>
 
-<!-- 👇 Styled file upload -->
-<label for="upload-photo" class="upload-label">Choose Photo</label>
-<input type="file" id="upload-photo" accept="image/*">
+    <div class="upload-section">
+      <label>Upload Frame:</label>
+      <input type="file" id="frameInput" accept="image/*" />
+    </div>
 
-  <div id="container"></div>
-  <button id="download-btn">Download Image</button>
+    <div class="upload-section">
+      <label>Upload Your Photo:</label>
+      <input type="file" id="photoInput" accept="image/*" />
+    </div>
 
-  <script src="https://unpkg.com/konva@9.2.0/konva.min.js"></script>
+    <div id="canvasContainer">
+      <canvas id="canvas"></canvas>
+      <div id="loading">Loading...</div>
+    </div>
+
+    <button id="downloadBtn">Download Framed Photo</button>
+  </main>
+
   <script src="script.js"></script>
 </body>
 </html>
