--- a/index.html
+++ b/index.html
@@ -2,27 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Frame Your Photo</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>IDLC Photo Frame</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
     <img src="assets/logo.png" alt="IDLC Logo" class="logo" />
     <h1>Frame Your Photo</h1>
-
-    <input type="file" id="upload" accept="image/*" />
-    <div id="frame-area">
-      <div id="canvas-container">
-        <canvas id="canvas"></canvas>
-        <img src="assets/frame.png" id="frame" alt="Frame" />
-      </div>
+    <input type="file" id="photoUpload" accept="image/*" />
+    <div id="canvas-container">
+      <canvas id="photoCanvas" width="500" height="500"></canvas>
     </div>
-
-    <button id="download">Download Framed Photo</button>
+    <button id="downloadBtn">Download Framed Photo</button>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/panzoom@9.4.0/dist/panzoom.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
